<resources>
    <string name="app_name">WitgoedXpert Technician</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Already Register?</string>
    <string name="name">Name*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="address">Address*</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="address_error">Please enter your address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="error_invalid_password">Please enter a minimum password of 3 characters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="str_nav_logout">Logout</string>
    <string name="confirmation">Confirmation</string>
    <string name="logout_confirmation_text">Do you really want to logout?</string>
    <string name="logout_confirmation_text_del">Do you really want to Delete?</string>
    <string name="CANCEL">Cancel</string>
    <string name="YES">Yes</string>
    <string name="DELETE">Delete</string>
    <string name="SAVE">Save</string>
    <string name="media_url_mp3">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4</string>

    <string name="google_brows_api_key">AIzaSyBu8VLJxeoABh5Rds21jj9DTiw8zW6eea4</string>
    <!-- <string name="google_maps_key">AIzaSyD54NsMXos1h5hCz7vdp0ardBupXpqPVm0</string>-->
    <string name="form">Form</string>
    <!--
Github Token
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
-->
    <!--Form Detail-->
    <string name="parent_name">Parent Name</string>
    <string name="phone_no">Phone number</string>
    <string name="area">Area</string>
    <string name="remark">Remark</string>
    <string name="add_child">Add Child</string>
    <string name="submit_form">Submit Form</string>
    <string name="email">Email</string>
    <string name="phone_code">+91 -</string>
    <string name="default_notification_channel_id">channel id</string>

    <string-array name="demo_relation_data">
        <item>Select Relation</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Guardian</item>
    </string-array>

    <string name="string_permission_help">Help</string>
    <string name="string_permission_help_text">The permission is missing.\n\nTo grant this permission click on Settings, then Permissions and turn the permission on.\n\nThen click back twice to return to the app</string>
    <string name="string_permission_quit">Exit App</string>
    <string name="string_settings">Settings</string>
    <string name="whoops">Whoops!</string>
    <string name="there_is_no_data">There is no data.</string>
    <string name="no_of_deals"><u>No. of Deals</u></string>
    <string name="counsellor"><u>Counsellor</u></string>
    <string name="contact"><u>Contact</u></string>
    <string name="json_lat_long">1</string>

    <string name="today_build">(1.0)</string>
    <string name="bdm_title">(1.0)</string>
    <string name="pro_title">(1.0)</string>
    <string name="check_net">Please Check Internet Connection</string>
    <string name="error_comment">Enter the valid Comment</string>
    <string name="error_phone">Enter the valid Phone No</string>
    <string name="error_address">Enter the valid Address</string>
    <string name="error_name">Enter the valid Name</string>
    <string name="error_sign">Please add signature</string>
    <string name="error_age">Enter the valid Machine Age</string>
    <string name="error_code">Enter the valid Type of Machine</string>
    <string name="error_des">Enter the valid Description</string>
    <string name="error_type">"Enter the valid type of machine "</string>
    <string name="full_name">Full Name*</string>
    <string name="phone">Phone*</string>
    <string name="password">Password*</string>
    <string name="description">Description*</string>
    <string name="age_machine">Age machine*</string>
    <string name="comments">Comments</string>
    <string name="cost">Cost</string>
    <string name="time">Time</string>
    <string name="error_cost">Enter the valid Cost</string>
    <string name="error_part">Enter the valid Parts</string>
    <string name="error_total">Enter the valid Total Amount</string>
    <string name="error_sing"> Enter the valid signature</string>
    <string name="pending">Pending</string>
    <string name="inprogress">InProgress</string>
    <string name="completed">Completed</string>
    <string name="services">Services:</string>
    <string name="error_part_amt">Enter total amount of  Parts</string>
    <string name="desc_parts">Description of Parts*</string>
    <!--  <string name="today_build">25-09-2021 (1.1)</string>-->
</resources>